Added scss entry point

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,4 +1,4 @@
-/*
+/*!
  * Copyright (C) 2019 Gigadrive - All rights reserved.
  * https://gigadrivegroup.com
  *
@@ -16,6 +16,3 @@
  * along with this program. If not, see <https://gnu.org/licenses/>
  */
 
-import "../scss/index.scss";
-
-console.log("Bundle loaded.");
