--- a/assets/scss/bootswatch/index.scss
+++ b/assets/scss/bootswatch/index.scss
@@ -16,5 +16,5 @@
  * along with this program. If not, see <https://gnu.org/licenses/>
  */
 
-@import "~bootstrap/scss/bootstrap";
-@import "bootswatch/index";
+@import "bootswatch";
+@import "variables";
