Added header template

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,8 @@
 {% extends "emptyBase.html.twig" %}
 
 {% block body %}
+	{% include "parts/header.html.twig" %}
+
 	{% block content %}
 	{% endblock %}
 {% endblock %}
