Fixed bootswatch theme not being applied properly

--- a/assets/scss/bootswatch/index.scss
+++ b/assets/scss/bootswatch/index.scss
@@ -16,5 +16,6 @@
  * along with this program. If not, see <https://gnu.org/licenses/>
  */
 
-@import "bootswatch";
 @import "variables";
+@import "~bootstrap/scss/bootstrap";
+@import "bootswatch";
