--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -16,20 +16,6 @@
  * along with this program. If not, see <https://gnu.org/licenses/>
  */
 
-$grid-breakpoints: (
-		xs: 0,
-		sm: 676px,
-		md: 868px,
-		lg: 1092px,
-		xl: 1500px
-);
+body, html {
 
-$container-max-widths: (
-		sm: 620px,
-		md: 820px,
-		lg: 1060px,
-		xl: 1440px
-);
-
-$body-color: #FFF;
-$body-bg: #202020;
+}
